Crash under ADW_IS_ANIMATION()
This is filled under Fedora 36 and contains more than 200 occurrences according to the FAF server:
https://bugzilla.redhat.com/show_bug.cgi?id=2069843
I do not see what exact version of libadwaita is in use there, might be probably libadwaita-1.1.0-1.fc36 or 1.1.rc.
Backtrace:
Thread 1 (Thread 0x7fe3468e6100 (LWP 2580)):
#0 0x00007fe34abbd81d in ADW_IS_ANIMATION (ptr=0x7fe34b901990 <g_cclosure_marshal_VOID__VARIANTv+64>) at ../src/adw-animation.h:36
__inst = 0x7fe34b901990 <g_cclosure_marshal_VOID__VARIANTv+64>
__t = 93971267007872
__r = <optimized out>
#1 adw_animation_get_widget (self=0x7fe34b901990 <g_cclosure_marshal_VOID__VARIANTv+64>) at ../src/adw-animation.c:456
_g_boolean_var_ = <optimized out>
priv = <optimized out>
__func__ = "adw_animation_get_widget"
#2 0x00007fe34abc24ac in resize_animation_value_cb (value=0, child=0x557765ef4e00) at ../src/adw-carousel.c:290
self = <optimized out>
delta = <optimized out>
#3 0x00007fe34abbde36 in adw_animation_target_set_value (value=0, self=0x557764aea930) at ../src/adw-animation-target.c:63
__func__ = <optimized out>
#4 set_value (self=0x7fe23ec2c3b0, t=<optimized out>) at ../src/adw-animation.c:158
priv = <optimized out>
#5 0x00007fe34abbdf30 in adw_animation_skip (self=0x7fe23ec2c3b0) at ../src/adw-animation.c:677
priv = 0x7fe23ec2c360
was_playing = 1
__func__ = "adw_animation_skip"
#6 0x00007fe34abbe0bd in tick_cb (widget=<optimized out>, frame_clock=<optimized out>, self=0x7fe23ec2c3b0) at ../src/adw-animation.c:191
priv = 0x7fe23ec2c360
frame_time = <optimized out>
duration = <optimized out>
t = <optimized out>
#7 0x00007fe34b2ef1a4 in gtk_widget_on_frame_clock_update (frame_clock=0x557763f34310, widget=0x55776419bb30) at ../gtk/gtkwidget.c:2996
info = 0x5577649efe00
next = <optimized out>
priv = <optimized out>
l = 0x557764674620
#8 0x00007fe34b902da0 in g_closure_invoke (closure=0x557766d35ef0, return_value=0x0, n_param_values=1, param_values=0x7ffeb07bf510, invocation_hint=0x7ffeb07bf490) at ../gobject/gclosure.c:835
tmp = {closure = {ref_count = 2, meta_marshal_nouse = 0, n_guards = 0, n_fnotifiers = 0, n_inotifiers = 0, in_inotify = 0, floating = 0, derivative_flag = 0, in_marshal = 1, is_invalid = 0, marshal = 0x7fe34b7ec6ba <g_hash_table_lookup+10>, data = 0x0, notifiers = 0x557763f34310}, vint = 1073741826}
gaicae_oldval = <optimized out>
cunion = <optimized out>
new_int = <optimized out>
old_int = -98693133
success = <optimized out>
marshal = 0x7fe34b9050c0 <g_cclosure_marshal_BOOLEAN__BOXED_BOXED+112>
marshal_data = 0x0
in_marshal = <optimized out>
real_closure = 0x557766d35ed0
__func__ = "g_closure_invoke"
#9 0x00007fe34b92f4b6 in handler_ref (handler=<optimized out>) at ../gobject/gsignal.c:712
__func__ = <optimized out>
_g_boolean_var_ = <optimized out>
#10 handler_ref (handler=0x557766d9b780) at ../gobject/gsignal.c:710
__func__ = <optimized out>
#11 signal_emit_unlocked_R.isra.0 (node=<optimized out>, detail=0, instance=0x557763f34310, emission_return=0x0, instance_and_params=0x7ffeb07bf510) at ../gobject/gsignal.c:3728
handler = 0x557766d9b780
accumulator = 0x0
emission = {next = 0x0, instance = 0x557763f34310, ihint = {signal_id = 343, detail = 0, run_type = (G_SIGNAL_RUN_FIRST | G_SIGNAL_ACCUMULATOR_FIRST_RUN)}, state = EMISSION_RUN, chain_type = 4}
class_closure = <optimized out>
hlist = <optimized out>
handler_list = <optimized out>
return_accu = 0x0
accu = {g_type = 0, data = {{v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}, {v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}}}
signal_id = 343
max_sequential_handler_number = 41729
return_value_altered = <optimized out>
EMIT_RESTART = <optimized out>
#12 0x00007fe34b91fa0e in g_signal_emit_valist (instance=<optimized out>, signal_id=<optimized out>, detail=<optimized out>, var_args=<optimized out>) at ../gobject/gsignal.c:3480
error = 0x0
ptype = <optimized out>
static_scope = <optimized out>
instance_and_params = 0x7ffeb07bf510
signal_return_type = <optimized out>
param_values = 0x7ffeb07bf528
node = <optimized out>
i = <optimized out>
n_params = <optimized out>
__func__ = "g_signal_emit_valist"
#13 0x00007fe34b91fc93 in closure_invoke_notifiers (notify_type=3, closure=0x7fe34b7ac2ac <sysprof_clock>) at ../gobject/gclosure.c:300
offs = 0
cunion = <optimized out>
cunion = <optimized out>
cunion = <optimized out>
cunion = <optimized out>
ndata = <optimized out>
n = <optimized out>
n = <optimized out>
i = 4294967295
success = <optimized out>
gaicae_oldval = <optimized out>
success = <optimized out>
gaicae_oldval = <optimized out>
success = <optimized out>
gaicae_oldval = <optimized out>
success = <optimized out>
gaicae_oldval = <optimized out>
old_int = <optimized out>
tmp = <optimized out>
old_int = <optimized out>
tmp = <optimized out>
old_int = <optimized out>
tmp = <optimized out>
old_int = <optimized out>
tmp = <optimized out>
new_int = <optimized out>
new_int = <optimized out>
new_int = <optimized out>
new_int = <optimized out>
#14 _g_closure_invoke_va (param_types=<optimized out>, n_params=<optimized out>, args=0x557763f34310, instance=<optimized out>, return_value=<optimized out>, closure=0x7fe34b7ac2ac <sysprof_clock>) at ../gobject/gclosure.c:899
marshal = <optimized out>
marshal_data = <optimized out>
in_marshal = <optimized out>
real_closure = 0x7fe34b7ac28c
real_closure = <optimized out>
__func__ = <optimized out>
_g_boolean_var_ = <optimized out>
marshal = <optimized out>
marshal_data = <optimized out>
in_marshal = <optimized out>
_g_boolean_var_ = <optimized out>
cunion = <optimized out>
new_int = <optimized out>
old_int = <optimized out>
success = <optimized out>
tmp = <optimized out>
gaicae_oldval = <optimized out>
cunion = <optimized out>
new_int = <optimized out>
old_int = <optimized out>
success = <optimized out>
tmp = <optimized out>
gaicae_oldval = <optimized out>
#15 g_signal_emit_valist (instance=<optimized out>, signal_id=<optimized out>, detail=<optimized out>, var_args=<optimized out>) at ../gobject/gsignal.c:3406
return_accu = <optimized out>
accu = <error reading variable accu (Cannot access memory at address 0x4d565884d2b)>
accumulator = <optimized out>
emission = <error reading variable emission (Cannot access memory at address 0x4d565884cdb)>
instance_type = <optimized out>
emission_return = <error reading variable emission_return (Cannot access memory at address 0x4d565884d0b)>
rtype = <optimized out>
static_scope = <optimized out>
fastpath_handler = <optimized out>
closure = <optimized out>
run_type = <optimized out>
hlist = <optimized out>
l = <optimized out>
fastpath = <optimized out>
instance_and_params = <optimized out>
signal_return_type = <optimized out>
param_values = <optimized out>
node = <optimized out>
i = <optimized out>
n_params = <optimized out>
__func__ = "g_signal_emit_valist"
Backtrace stopped: Cannot access memory at address 0x4d565884dd3