adw-carousel: Fix a possible use-after-free under animate_child_resize()

The could happen a use-after-free crash when removing a carousel child,
which is still animating.

Closes https://gitlab.gnome.org/GNOME/libadwaita/-/issues/453